--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "MULTIBINIT"
-theme = "XuDoc"
+theme = "xudoc"
 
 [params]
   author = "Xu"
