--- a/config.toml
+++ b/config.toml
@@ -29,26 +29,47 @@ theme = "xudoc"
     url = "/docs/"
     weight = 2
   [[menu.main]]
+    name = "Database"
+    url = "/database/"
+    weight = 3
+  [[menu.main]]
+    name = "Publications"
+    url = "/publications/"
+    weight = 4
+  [[menu.main]]
     name = "Posts"
     url = "/posts/"
-    weight = 3
+    weight = 5
   [[menu.main]]
     name = "About"
     url = "/about/"
-    weight = 4
+    weight = 6
   [[menu.main]]
     name = "Contact"
     url = "/contact/"
-    weight = 5
+    weight = 7
 
   [[menu.docs]]
     name = "Installation"
     url = "/docs/installation/"
     weight = 1
   [[menu.docs]]
-    name = "Usage"
-    url = "/docs/usage/"
+    name = "MULTIBINIT-Lattice"
+    url = "/docs/lattice/"
     weight = 2
+  [[menu.docs]]
+    name = "MULTIBINIT-LWF"
+    url = "/docs/LWF/"
+    weight = 3
+  [[menu.docs]]
+    name = "MULTIBINIT-Spin"
+    url = "/docs/spin/"
+    weight = 4
+  [[menu.docs]]
+    name = "ecosystem"
+    url = "/docs/ecosystem/"
+    weight = 5
+
 
 [permalinks]
   posts = "/posts/:year/:month/:title/"
